# CATE

./: .gitignore  README.md  pyproject.toml
cate/: __init__.py
examples/: llm.json  trad-ml.json  vendor_llm.py  vendor_trad_ml.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: trace
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/_not-found/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @swc.js  next.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/static/chunks/app/: layout.js
frontend/.next/static/chunks/app/_not-found/: page.js
frontend/.next/static/css/app/: layout.css
frontend/.next/static/webpack/: webpack.1c2914427683ff3c.hot-update.js  webpack.c175d0ee91e4b833.hot-update.js
frontend/.next/static/webpack/app/: layout.c175d0ee91e4b833.hot-update.js
frontend/.next/types/app/: layout.ts
frontend/app/: globals.css  layout.tsx  page.tsx
sandbox/: run.py  run.sh
sandbox/collector/: app.py
sandbox/fhir/: app.py
sandbox/hospital/: app.py
sandbox/llm/: app.py
sandbox/middleware/: app.py
sandbox/trad_ml/: app.py
schemas/: event.schema.json  fhir-access-event.schema.json  trace.schema.json
spec/: atna-extension.md  overview.md
tests/: test_cate.py
